Update client to ent v3.1.1
