# pkg/external/api/openapi.yaml
@@ -5,7 +5,7 @@ info:
   description: This is the Anchore Enterprise API. It provides additional external
     API routes and functionality for enterprise users.
   title: Anchore Enterprise API Server
-  version: 0.1.1
+  version: 0.2.0
 servers:
 - url: /enterprise
 paths:
@@ -90,7 +90,11 @@ paths:
         schema:
           default: false
           type: boolean
-      - in: query
+      - description: Filter results to include only vulnerabilities that are not marked
+          as invalid by upstream OS vendor data. When set to true, it will filter
+          out all vulnerabilities where `will_not_fix` is False. If false all vulnerabilities
+          are returned regardless of `will_not_fix`
+        in: query
         name: vendor_only
         schema:
           default: true
@@ -976,6 +980,7 @@ components:
         package_type: package_type
         package_cpe: package_cpe
         url: url
+        will_not_fix: true
         feed: feed
         package_version: package_version
         fix: fix
@@ -1022,6 +1027,9 @@ components:
           description: The location (if applicable) of the vulnerable package in the
             container filesystem
           type: string
+        will_not_fix:
+          description: Whether a vendor will fix or not fix the vulnerability
+          type: boolean
         nvd_data:
           description: List of Nvd Data objects
           items:
@@ -1175,6 +1183,7 @@ components:
           package_type: package_type
           package_cpe: package_cpe
           url: url
+          will_not_fix: true
           feed: feed
           package_version: package_version
           fix: fix
@@ -1226,6 +1235,7 @@ components:
           package_type: package_type
           package_cpe: package_cpe
           url: url
+          will_not_fix: true
           feed: feed
           package_version: package_version
           fix: fix
